<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:srcCompat="@drawable/smile_icon" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rate"
        android:textSize="20sp" />

    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/ratingBar"
        android:progressTint="#FFB300"
        android:rating="0.0" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rate2"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        style="@android:style/Widget.Material.Light.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/white_shape"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/rate3"
        android:inputType="textLongMessage|textMultiLine"
        android:lines="4"
        android:maxLines="4"
        android:padding="5dp"
        android:textSize="16sp" />

</LinearLayout>