<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/title_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filterTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/hours_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_filter" />

    <TextView
        android:id="@+id/hours_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-5dp"
        android:text="@string/hours_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/hours_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <LinearLayout
        android:id="@+id/hours_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/date_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hours_label">

        <TextView
            android:id="@+id/min_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/hour_values"
            style="@android:style/Widget.Material.Light.SeekBar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:contentDescription="@string/Caregiving"
            android:drawablePadding="5dp"
            android:gravity="start|center_vertical"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:progress="7"
            android:progressTint="@color/teal_200"
            android:singleLine="true"
            android:stepSize="1"
            android:textColor="@color/black"
            android:thumbTint="@color/teal_200"
            android:valueFrom="0"
            android:valueTo="10"
            app:drawableStartCompat="@drawable/hours_money_icon2" />

        <TextView
            android:id="@+id/max_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <TextView
        android:id="@+id/date_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dateSort"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/start_date_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hours_layout" />

    <LinearLayout
        android:id="@+id/start_date_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/end_date_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_label">

        <TextView
            android:id="@+id/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:gravity="start|center_vertical"
            android:hint="@string/start_date"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:drawableStartCompat="@drawable/calendar_icon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/end_date_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/time_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_date_layout">

        <TextView
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:gravity="start|center_vertical"
            android:hint="@string/end_date"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:drawableStartCompat="@drawable/calendar_icon" />

    </LinearLayout>

    <TextView
        android:id="@+id/time_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/timeSort"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/start_time_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_date_layout" />

    <LinearLayout
        android:id="@+id/start_time_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/end_time_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_label">

        <TextView
            android:id="@+id/from2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:gravity="start|center_vertical"
            android:hint="@string/start_time"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:drawableStartCompat="@drawable/clock_icon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/end_time_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_time_layout">

        <TextView
            android:id="@+id/to2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:gravity="start|center_vertical"
            android:hint="@string/end_time"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:drawableStartCompat="@drawable/clock_icon" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>